# rtetris

./: .gitignore  Cargo.toml  README.md  index.html  main.js  style.css
.github/workflows/: deploy.yaml
src/: game.rs  main.rs  tetromino.rs
