[package]
name = "rtetris"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
getrandom = { version = "0.3", features = ["wasm_js"] }
gloo-events = "0.2.0"
gloo-timers = "0.2"
gloo-utils = "0.2.0"
rand = { version = "0.9" }
wasm-bindgen = "0.2.100"
web-sys = "0.3.77"
yew = { version = "0.20", features = ["csr"] }